fix : active filter alignment

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -4661,6 +4661,7 @@ button.pswp__button--zoom:hover {
 .widget_layered_nav_filters ul li.chosen a::before,
 #secondary .widget_layered_nav_filters ul li.chosen a::before {
   margin-left: .5em;
+  line-height: inherit;
 }
 
 .woocommerce-terms-and-conditions {
