--- a/sass/site/compatibility/woocommerce/woocommerce-grid.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-grid.scss
@@ -3920,6 +3920,7 @@ button.pswp__button--zoom:hover {
 
 		&::before {
 			margin-right: .5em;
+			line-height: inherit;
 		}
 	}
 }
