--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -3937,6 +3937,7 @@ button.pswp__button--zoom:hover {
 
 		&::before {
 			margin-right: .5em;
+			line-height: inherit;
 		}
 	}
 }
